// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/columns/demo/breakpoint.md correctly 1`] = `
<div>
  <div
    class="sc-bdVaJa erjPbR"
  >
    <div
      class="ant-skeleton"
    >
      <div
        class="ant-skeleton-content"
      >
        <h3
          class="ant-skeleton-title"
          style="width:38%"
        />
        <ul
          class="ant-skeleton-paragraph"
        >
          <li />
          <li />
          <li
            style="width:61%"
          />
        </ul>
      </div>
    </div>
    <div
      class="ant-skeleton"
    >
      <div
        class="ant-skeleton-content"
      >
        <h3
          class="ant-skeleton-title"
          style="width:38%"
        />
        <ul
          class="ant-skeleton-paragraph"
        >
          <li />
          <li />
          <li
            style="width:61%"
          />
        </ul>
      </div>
    </div>
    <div
      class="ant-skeleton"
    >
      <div
        class="ant-skeleton-content"
      >
        <h3
          class="ant-skeleton-title"
          style="width:38%"
        />
        <ul
          class="ant-skeleton-paragraph"
        >
          <li />
          <li />
          <li
            style="width:61%"
          />
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/columns/demo/count.md correctly 1`] = `
<div>
  <div
    class="sc-bdVaJa jYPFSg"
  >
    <div
      class="ant-skeleton"
    >
      <div
        class="ant-skeleton-content"
      >
        <h3
          class="ant-skeleton-title"
          style="width:38%"
        />
        <ul
          class="ant-skeleton-paragraph"
        >
          <li />
          <li />
          <li
            style="width:61%"
          />
        </ul>
      </div>
    </div>
    <div
      class="ant-skeleton"
    >
      <div
        class="ant-skeleton-content"
      >
        <h3
          class="ant-skeleton-title"
          style="width:38%"
        />
        <ul
          class="ant-skeleton-paragraph"
        >
          <li />
          <li />
          <li
            style="width:61%"
          />
        </ul>
      </div>
    </div>
    <div
      class="ant-skeleton"
    >
      <div
        class="ant-skeleton-content"
      >
        <h3
          class="ant-skeleton-title"
          style="width:38%"
        />
        <ul
          class="ant-skeleton-paragraph"
        >
          <li />
          <li />
          <li
            style="width:61%"
          />
        </ul>
      </div>
    </div>
    <div
      class="ant-skeleton"
    >
      <div
        class="ant-skeleton-content"
      >
        <h3
          class="ant-skeleton-title"
          style="width:38%"
        />
        <ul
          class="ant-skeleton-paragraph"
        >
          <li />
          <li />
          <li
            style="width:61%"
          />
        </ul>
      </div>
    </div>
    <div
      class="ant-skeleton"
    >
      <div
        class="ant-skeleton-content"
      >
        <h3
          class="ant-skeleton-title"
          style="width:38%"
        />
        <ul
          class="ant-skeleton-paragraph"
        >
          <li />
          <li />
          <li
            style="width:61%"
          />
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/columns/demo/template.md correctly 1`] = `
<div>
  <div
    class="sc-bdVaJa csHxJM"
  >
    <div
      class="ant-skeleton"
    >
      <div
        class="ant-skeleton-content"
      >
        <h3
          class="ant-skeleton-title"
          style="width:38%"
        />
        <ul
          class="ant-skeleton-paragraph"
        >
          <li />
          <li />
          <li
            style="width:61%"
          />
        </ul>
      </div>
    </div>
    <div
      class="ant-skeleton"
    >
      <div
        class="ant-skeleton-content"
      >
        <h3
          class="ant-skeleton-title"
          style="width:38%"
        />
        <ul
          class="ant-skeleton-paragraph"
        >
          <li />
          <li />
          <li
            style="width:61%"
          />
        </ul>
      </div>
    </div>
    <div
      class="ant-skeleton"
    >
      <div
        class="ant-skeleton-content"
      >
        <h3
          class="ant-skeleton-title"
          style="width:38%"
        />
        <ul
          class="ant-skeleton-paragraph"
        >
          <li />
          <li />
          <li
            style="width:61%"
          />
        </ul>
      </div>
    </div>
    <div
      class="ant-skeleton"
    >
      <div
        class="ant-skeleton-content"
      >
        <h3
          class="ant-skeleton-title"
          style="width:38%"
        />
        <ul
          class="ant-skeleton-paragraph"
        >
          <li />
          <li />
          <li
            style="width:61%"
          />
        </ul>
      </div>
    </div>
    <div
      class="ant-skeleton"
    >
      <div
        class="ant-skeleton-content"
      >
        <h3
          class="ant-skeleton-title"
          style="width:38%"
        />
        <ul
          class="ant-skeleton-paragraph"
        >
          <li />
          <li />
          <li
            style="width:61%"
          />
        </ul>
      </div>
    </div>
  </div>
</div>
`;
